Engadido JavaScript VI

--- a/2_javascript/index.html
+++ b/2_javascript/index.html
@@ -10,7 +10,9 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1>Introduccion a JavaScript</h1>
+    <h1 id="titulo">Introduccion a JavaScript</h1>
     
+    <p class="mensaje">Primer parrafo</p>
+    <p class="mensaje">Segundo parrafo</p>
 </body>
 </html>
