Engadido JavaScript VIII

--- a/2_javascript/index.html
+++ b/2_javascript/index.html
@@ -10,9 +10,10 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1 id="titulo">Introduccion a JavaScript</h1>
+    <h1 id="titulo">Consumiendo recursos de una API Rest</h1>
     
-    <p class="mensaje">Primer parrafo</p>
-    <p class="mensaje">Segundo parrafo</p>
+    <div id="contenedorApi"></div>
+
+    <div id="contenedorAlbums"></div>
 </body>
 </html>
