Engadido JavaScript VII

--- a/2_javascript/index.html
+++ b/2_javascript/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <h1 id="titulo">Consumiendo recursos de una API Rest</h1>
+
+    <button id="miBoton">Haceme click</button>
     
     <div id="contenedorApi"></div>
 
